Add TLS setup and example keys.

--- a/redis.conf
+++ b/redis.conf
@@ -1,2 +1,8 @@
 # This is just a random password for testing.
 requirepass ZpAVKkiTweNeqNR4p
+
+# TLS config - `make generate` creates the necessary files.
+tls-port 6380
+tls-cert-file tls/redis.crt
+tls-key-file tls/redis.key
+tls-ca-cert-file tls/ca.crt
