--- a/k8s/secret.yaml
+++ b/k8s/secret.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 data:
-  url: YWRtaW4=
-  password: MWYyZDFlMmU2N2Rm
+  url:
+  password:
   # False: ZmFsc2U=
   # True: dHJ1ZQ==
   use_tls: ZmFsc2U=
