--- a/k8s/secret.yaml
+++ b/k8s/secret.yaml
@@ -1,10 +1,12 @@
 apiVersion: v1
 data:
-  url:
-  password:
+  # redis-master.default.svc.cluster.local:6379
+  url: cmVkaXMtbWFzdGVyLmRlZmF1bHQuc3ZjLmNsdXN0ZXIubG9jYWw6NjM3OQ==
+  # Standard password from redis.conf
+  password: WnBBVktraVR3ZU5lcU5SNHA=
   # False: ZmFsc2U=
   # True: dHJ1ZQ==
-  use_tls: ZmFsc2U=
+  use_tls: dHJ1ZQ==
 kind: Secret
 metadata:
   name: rtest
