Add some more stuff to do 2 independant deploys/services and hit pods.

--- a/hit-pod/Makefile
+++ b/hit-pod/Makefile
@@ -5,4 +5,7 @@ all: docker
 docker: ## Build Docker image
 	docker build . -t $(CONTAINER_NAME)
 
+docker_two: ## Build second Docker image
+	docker build -f Dockerfile.two . -t $(CONTAINER_NAME)2
+
 .PHONY: docker
