--- a/k8s/deploy.yaml
+++ b/k8s/deploy.yaml
@@ -8,6 +8,11 @@ metadata:
     prometheus.io/port: "1323"
     prometheus.io/scrape: "true"
 spec:
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxUnavailable: 0
+      maxSurge: 2
   replicas: 3
   selector:
     matchLabels:
