--- a/k8s/secret.yaml
+++ b/k8s/secret.yaml
@@ -1,7 +1,8 @@
 apiVersion: v1
 data:
-  # redis-master.default.svc.cluster.local:6379
-  url: cmVkaXMtbWFzdGVyLmRlZmF1bHQuc3ZjLmNsdXN0ZXIubG9jYWw6NjM3OQ==
+  # redis-master.default.svc.cluster.local:6379 cmVkaXMtbWFzdGVyLmRlZmF1bHQuc3ZjLmNsdXN0ZXIubG9jYWw6NjM3OQ==
+  # newredis-master.default.svc.cluster.local:6379 bmV3cmVkaXMtbWFzdGVyLmRlZmF1bHQuc3ZjLmNsdXN0ZXIubG9jYWw6NjM3OQ==
+  url: bmV3cmVkaXMtbWFzdGVyLmRlZmF1bHQuc3ZjLmNsdXN0ZXIubG9jYWw6NjM3OQ==
   # Standard password from redis.conf
   password: WnBBVktraVR3ZU5lcU5SNHA=
   # False: ZmFsc2U=
